crates/sith_python_parser/tests/snapshots/invalid_syntax@decorator_missing_newline.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/decorator_missing_newline.py
---
## AST

```
Module(
    ModModule {
        range: 0..60,
        body: [
            FunctionDef(
                FunctionDefStmt {
                    range: 0..18,
                    is_async: false,
                    decorator_list: [
                        Decorator {
                            range: 0..2,
                            expression: Name(
                                NameExpr {
                                    range: 1..2,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("foo"),
                        range: 7..10,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 10..12,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 14..17,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 14..17,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 18..42,
                    is_async: true,
                    decorator_list: [
                        Decorator {
                            range: 18..20,
                            expression: Name(
                                NameExpr {
                                    range: 19..20,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("foo"),
                        range: 31..34,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 34..36,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 38..41,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 38..41,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            ClassDef(
                ClassDefStmt {
                    range: 42..60,
                    decorator_list: [
                        Decorator {
                            range: 42..44,
                            expression: Name(
                                NameExpr {
                                    range: 43..44,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 51..54,
                    },
                    type_params: None,
                    arguments: None,
                    body: [
                        Expr(
                            ExprStmt {
                                range: 56..59,
                                value: EllipsisLiteral(
                                    EllipsisLiteralExpr {
                                        range: 56..59,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | @x def foo(): ...
  |    ^^^ Syntax Error: Expected newline, found 'def'
2 | @x async def foo(): ...
3 | @x class Foo: ...
  |


  |
1 | @x def foo(): ...
2 | @x async def foo(): ...
  |    ^^^^^ Syntax Error: Expected newline, found 'async'
3 | @x class Foo: ...
  |


  |
1 | @x def foo(): ...
2 | @x async def foo(): ...
3 | @x class Foo: ...
  |    ^^^^^ Syntax Error: Expected newline, found 'class'
  |
